--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,7 +36,7 @@
 
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	//"postCreateCommand": ""
+	"postCreateCommand": "pip install langchain sodapy",
 
 	//"postStartCommand": "",
 
