--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,8 +10,8 @@
 
     "features": {
 	    "ghcr.io/devcontainers-contrib/features/clojure-asdf:2": {},
-		"ghcr.io/devcontainers-contrib/features/bash-command:1": {"command": "apt-get update && apt-get install rlwrap"},
-		"ghcr.io/devcontainers/features/python:1": {},
+		"ghcr.io/devcontainers-contrib/features/bash-command:1": {"command": "apt-get update && apt-get install -y rlwrap"},
+		"ghcr.io/devcontainers/features/python:1.3.1": {},
 		"ghcr.io/rocker-org/devcontainer-features/r-apt:0": {}
 
 
