--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,9 +9,9 @@
 	//"runArgs": [ "-p", "12345:12345" ],
 
     "features": {
-	    "ghcr.io/devcontainers-contrib/features/clojure-asdf:2": {},
+	    "ghcr.io/devcontainers-contrib/features/clojure-asdf:2": {"version":"1.11"},
 		"ghcr.io/devcontainers-contrib/features/bash-command:1": {"command": "apt-get update && apt-get install -y rlwrap"},
-		"ghcr.io/devcontainers/features/python:1.3.1": {},
+		"ghcr.io/devcontainers/features/python:1.3.1": {"version":"3.11"},
 		"ghcr.io/rocker-org/devcontainer-features/r-apt:0": {}
 
 
@@ -36,7 +36,7 @@
 
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip install langchain sodapy",
+	//"postCreateCommand": "pip3 install langchain sodapy",
 
 	//"postStartCommand": "",
 
