--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,28 +5,23 @@
 
 		},
 
-	//if you want to run a repl inside container
-	//"runArgs": [ "-p", "12345:12345" ],
 
     "features": {
-	    "ghcr.io/devcontainers-contrib/features/clojure-asdf:2": {},
-		"ghcr.io/devcontainers-contrib/features/bash-command:1": {"command": "apt-get update && apt-get install -y rlwrap python3 python3-pip"},
-		//"ghcr.io/devcontainers/features/python:1.3.1": {},
+	    	"ghcr.io/devcontainers-contrib/features/clojure-asdf:2": {},
+	    	"ghcr.io/devcontainers-contrib/features/tmux-apt-get:1": {},
+		"ghcr.io/devcontainers-contrib/features/bash-command:1": {"command": "apt-get update && apt-get install -y rlwrap"},
+		"ghcr.io/devcontainers/features/python:1": {},
 		"ghcr.io/rocker-org/devcontainer-features/r-apt:0": {}
 
 
 },
-    "forwardPorts": ["12345"],
-	//Configure tool-specific properties.
+    "forwardPorts": ["12345","7777"],
 	"customizations": {
-		// Configure properties specific to VS Code.
 		"vscode": {
-			// Set *default* container specific settings.json values on container create.
 			"settings": { 
 			},
 			"extensions": 
 			[
-			// Add the IDs of extensions you want installed when the container is created.
 				"vscjava.vscode-java-pack",
 				"borkdude.clj-kondo",
 				"betterthantomorrow.calva"
@@ -34,12 +29,6 @@
 		}
 	},
 
-
-	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install --break-system-packages langchain sodapy",
-
-	//"postStartCommand": "",
-
-	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode"
+	"remoteUser": "vscode",
+	"postStartCommand": "tmux new -d /home/vscode/.asdf/shims/clojure -Sdeps '{:deps {nrepl/nrepl {:mvn/version,\"1.0.0\"},cider/cider-nrepl {:mvn/version,\"RELEASE\"}}},refactor-nrepl/refactor-nrepl {:mvn/version \"RELEASE\"}}' -m nrepl.cmdline -p 12345 --middleware \"[cider.nrepl/cider-middleware]\" &"
 }
